Fixed overflowing username

--- a/src/components/inbox/drawer/friends/friend-item/styles.module.scss
+++ b/src/components/inbox/drawer/friends/friend-item/styles.module.scss
@@ -37,4 +37,7 @@
 .details {
   margin-left: 5px;
   margin-right: auto;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
