--- a/src/components/main-pane-header/styles.module.scss
+++ b/src/components/main-pane-header/styles.module.scss
@@ -26,6 +26,9 @@
 .title {
   font-size: 12px;
   margin-right: 1px;
+      white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .subTitle {
@@ -33,6 +36,9 @@
   font-size: 11px;
   white-space: nowrap;
   overflow: hidden;
+      white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 
