--- a/src/components/profile-pane/styles.module.scss
+++ b/src/components/profile-pane/styles.module.scss
@@ -48,6 +48,7 @@
 
   .usernameTag {
     font-size: 16px;
+    overflow-wrap: anywhere;
   }
   .tag {
     color: rgba(255, 255, 255, 0.6);
@@ -101,6 +102,9 @@
       margin-right: 0;
       color: white;
       text-decoration: none;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       cursor: pointer;
       &:hover {
         background-color: rgba(255, 255, 255, 0.1);
@@ -108,6 +112,9 @@
     }
     .name {
       margin-left: 5px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
@@ -117,6 +124,10 @@
   flex-direction: column;
   margin-left: 20px;
   flex: 1;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 
