--- a/src/components/servers/drawer/members/styles.module.scss
+++ b/src/components/servers/drawer/members/styles.module.scss
@@ -12,6 +12,9 @@
   font-size: 14px;
   color: rgba(255, 255, 255, 0.7);
   margin: 3px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .roleItem {
   display: flex;
@@ -40,10 +43,22 @@
   cursor: pointer;
   border-radius: 8px;
   transition: 0.2s;
+  overflow: hidden;
   .memberInfo {
     margin-left: 5px;
   }
   &:hover {
     background-color: rgba(255, 255, 255, 0.05);
+  }
+  .memberInfo {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+  }
+  .username {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
